--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,9 @@
 body {
-  font-family: Gordita, Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Gordita, Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
 }
 
-a {
+#app > a {
   margin-right: 1rem;
 }
 
